<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activity and fragment titles -->

    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_accept_pending_invitation">Accept Pending Invitations</string>
    <string name="title_activity_view_stream">Stream</string>
    <string name="title_activity_members">Members</string>
    <string name="title_activity_invite">Invite</string>
    <string name="title_activity_search">Filter Results</string>
    <string name="title_activity_create_request">Create Request</string>
    <string name="title_activity_invite_users">Invite Users</string>
    <string name="title_activity_upload_request_icon">Upload Request Icon</string>
    <string name="title_activity_home">Entangle</string>
    <string name="title_activity_change_offer_price">Change Offer Price</string>
    <string name="title_activity_create_offer">Create Offer</string>
    <string name="title_activity_edit_profile">Edit Your Profile</string>
    <string name="title_activity_offer">Offer</string>
    <string name="title_activity_manage_pending_invitation">Manage Pending Invitations</string>
    <string name="title_activity_stream_request_fragment">Requests Stream</string>
    <string name="title_activity_tangle_stream">Tangles Stream</string>
    <string name="title_activity_create_tangle">Create Tangle</string>
    <string name="title_activity_general_profile">Your Profile</string>
    <string name="title_activity_splash">Entangle</string>
    <string name="title_activity_my_requests">MyRequestsActivity</string>
    <string name="title_activity_my_offers_fragment">MyOffers</string>
    <string name="add">Add</string>
    <string name="app_name">Entangle</string>
    <string name="claim_button">Claim </string>
    <string name="mssg">Body:</string>
    <string name="claimName">Claim Form</string>
    <string name="send">Send</string>
    <string name="enterClaim">I am claiming about \.\.\.</string>
    <string name="Requests">Create Request</string>
    <string name="name">Request\'s name</string>
    <string name="claimReport">Claim Report </string>
    <string name="claimDate">Claim created on: </string>
    <string name="claimer">Claimer name: </string>
    <string name="tangleOwnerEmail">Tangle owner Email: </string>
    <string name="tangleOwnerName">Tangle owner name: </string>
    <string name="tangle">Tangle name: </string>
    <string name="claim">Claim Message</string>
    <string name="offerer">Offerer name: </string>
    <string name="requester">Requester name: </string>
    <string name="offererEmail">Offerer Email: </string>
    <string name="requesterEmail">Requester Email: </string>
    <string name="description">What do you need ?</string>
    <string name="post">Create</string>
    <string name="termsOfUse">By Creating This Claim You Have Agreed on Entangle terms of use</string>
    <string name="Tags">Tags</string>
    <string name="tagHint">food, tech, living</string>
    <string name="priceHint">5</string>
    <string name="resolve">Resolve</string>
    <string name="hello_world">Hello world!</string>
    <string name="requestDescription">I want someone to help me change the world\.\.\.</string>
    <string name="tags">Tags: food, society, games</string>
    <string name="priceDescription">Price\: 125</string>
    <string name="dueDate">Due date</string>
    <string name="pts">Pts</string>
    <string name="due">Due</string>
    <string name="create">Create</string>
    <string name="createRequest">Request</string>
    <string name="toEntangle">to Entangle\.\.\.</string>
    <string name="welcome">Welcome \ </string>
    <string name="hurryUp">Hurry up \ </string>
    <string name="andCreate">and create a\ </string>
    <string name="tangleNameHint">Specify a Tangle name</string>
    <string name="here">Create tangle now! </string>
    <string name="iconButton">Choose an Icon</string>
    <string name="tangleIcon">Available Icons</string>
    <string name="createTangle">CREATE</string>
    <string name="checkTangleName">Check</string>
    <string name="aTangle">Tangle</string>
    <string name="date">Date</string>
    <string name="ChooseDate">Pick deadline</string>
    <string name="deadLine">Expected deadline</string>
    <string name="price">Price</string>
    <string name="check">Please confirm</string>
    <string name="viewStream">Stream</string>
    <string name="viewMembers">Members</string>
    <string name="viewProfile">Profile</string>
    <string name="tangleName">Tangle Name</string>
    <string name="search_title">Filter Stream</string>
    <string name="search_hint">Enter a UserName to filter with</string>
    <string name="tagFilter">Write a tag to filter with</string>
    <string name="requesterFilter">Write a requester name to filter with</string>
    <string name="fullTextFilter">Choose Full Text Search to be able to write :)</string>
    <string name="spinner">Filtering options</string>
    <string name="add_email">+</string>
    <string name="invite_continue">Continue</string>
    <string name="user_email">User Email</string>
    <string name="not_members">Not Members</string>
    <string name="entangle_members">Entangle Members</string>
    <string name="already_in_the_tangle">Already in the Tangle</string>
    <string name="wrong_emails">Not Valid Emails</string>
    <string name="invite_write_the_invitation_message">Write the invitation message.</string>
    <string name="invite">Invite</string>
    <string name="days">Day</string>
    <string name="months">Month</string>
    <string name="years">Year</string>
    <string name="my_description">My Description</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm PAssword</string>
    <string name="add_your_email">Add Your Email</string>
    <string name="save">Save</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="current_description">Enter your description</string>
    <string name="email_notification_on">Turn on notification</string>
    <string name="DOB">Date Of Birth</string>
    <string name="title_activity_notification_test">NotificationTest</string>
    <string name="PREFERENCE_FILE_KEY">prefs</string>
    <string name="new_notification">new Notification</string>
    <string name="icon">icon</string>
    <string name="comment_description">Write a comment\.\.\.</string>
    <string name="accept_offer">accept</string>
    <string name="register">Register</string>
    <string name="wrongCredentials">Invalid Username or Password</string>
    <string name="tangleDescriptionHint">Description (This tangle aims to....etc)</string>
    <string name="createTangleAgreement">By Creating This Tangle You Have Agreed To Entangle terms of use</string>
    <string name="requestIcon">Available Icons</string>
    <string name="transaction_description"> &#160;completed an offer for&#160; </string>
    <string name="transactions_title">Activities: </string>

    <string-array name="sidebar_list">
        <item>Item A</item>
        <item>Item B</item>
    </string-array>

    <string name="newOfferPrice">Enter the new price</string>
    <string name="changePrice">CHANGE</string>
    <string name="preview_request">Preview Request</string>
    <string name="create_offer">What\'s your offer?</string>
    <string name="offer_description">Offer\'s description</string>
    <string name="offer_requested_price">requested price</string>
    <string name="requested_price_hint">enter a positive number</string>
    <string name="expected_deadline">Choose expected Deadline</string>
    <string name="post_offer">Post Offer</string>
    <string name="offer_check">check when you\'re done</string>
    <string name="pending_invitation_approve">Approve</string>
    <string name="pending_invitation_reject">Reject</string>
    <string name="pending_invitation_no_pending">No Pending Invitations now !</string>
    <string name="refresh">Refresh</string>
    <string name="edit_info">Edit your information</string>
    <string name="leave_tangle">Leave current tangle</string>
    <string name="transactions">Transactions: </string>
    <string name="action_filter">Filter</string>
    <string name="offers">Offers</string>
    <string name="profileActivity">Profile</string>
    <string name="requiredField">This field is required</string>
    <string name="dateChoice">4/May/2014</string>

    <string-array name="spinnerChoice">
        <item>None</item>
        <item>Tag</item>
        <item>Requester Name</item>
        <item>Full Text Search</item>
    </string-array>

    <string name="action_invite">Invite</string>
    <string name="delete_button_text">Delete</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="create_tangle">Create Tangle</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="login_username">username: entangle user</string>
    <string name="password">password</string>
    <string name="invitation_message_placeholder">Write an invitation message ..</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="toastError">An error has occurred.</string>
    <string name="sample_user_main">user@entangle.io</string>
    <string name="balanceInsufficient">"Not enough balance"</string>
    <string name="logoutActivity">Logout</string>
    <string name="logout">Logout</string>
    <string name="title_activity_general_profile">General Profile</string>
    <string name="title_activity_splash">Splash</string>
    <string name="notifications">Notifications</string>
    <string name="deleteRequestButton">Delete</string>
    <string name="reOpenRequestButton">Reopen</string>
    <string name="closedRequests">CLOSED REQUESTS</string>
    <string name="openRequests">OPEN REQUESTS</string>
    <string name="frozenRequests">FROZEN REQUESTS</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="passwordReset">Reset</string>
    <string name="your_name">Your User Name</string>
    <string name="your_email">your.email@example.com</string>
    <string name="pendingOffers">PENDING OFFERS</string>
    <string name="doneOffers">DONE OFFERS</string>
    <string name="acceptedOffers">ACCEPTED OFFERS</string>
    <string name="failedOffers">FAILED OFFERS</string>
    <string name="rejectedOffers">REJECTED OFFERS</string>
    <string name="reset">reset tangle!</string>
    <string name="search_string">Member Name</string>
    <string name="member_not_found">"Member not found."</string>
    <string name="done">Mark as done</string>
    <string name="mark">Marked As Done</string>
    <string name="error">Error</string>
    <string name="notaccepted">Offer is not accepted</string>
    <string name="alreadymarked">Offer is already marked as done</string>
    <string name="editProfile">Edit Profile</string>
    <string name="actionLeaveTangle">Leave Tangle</string>
    <string name="load_more">Load more</string>
    <string name="loading">Loading\.\.\.</string>
    <string name="no_more_requests">Ops, there is no more requests to fetch</string>
    <string name="email">your.email@example.com</string>

</resources>