<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search Widget -->
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="test"/>
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_invite"/>
    <item
        android:id="@+id/createRequest"
        android:icon="@drawable/ic_action_new_white"
        android:showAsAction="ifRoom"
        android:title="@string/action_filter"/>
    <item
        android:id="@+id/action_leave_tangle"
        android:showAsAction="never"
        android:title="@string/actionLeaveTangle"
        android:visible="false"/>

</menu>