<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/paddingSmall"
    tools:context=".RequestsActivity" >

    
        
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelRequest"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="@dimen/buttonHeight"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_remove"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/textLarge"
            />

        <View 
            style="@style/dividerVertical"
        />
        
        
        <Button
            android:id="@+id/post"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="@dimen/buttonHeight"
            android:layout_weight="1"
            android:clickable="true"
            android:textAlignment="center"
            android:drawableLeft="@drawable/ic_action_forward_green"
            android:text="@string/add"
            android:textColor="@color/green"
            android:textSize="@dimen/textLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/colorBorder"
            android:layout_weight="1"
            android:background="@color/blue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/colorBorder"
            android:layout_weight="1"
            android:background="@color/orange" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/colorBorder"
            android:layout_weight="1"
            android:background="@color/cyan" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/colorBorder"
            android:layout_weight="1"
            android:background="@color/megenta" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/colorBorder"
            android:layout_weight="1"
            android:background="@color/lightGreen" />
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textAreaHeight"
        android:layout_marginTop="@dimen/marginSmall"
        android:ems="10"
        android:height="@dimen/textFieldHeight"
        android:hint="@string/requestDescription"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textFieldHeight"
        android:layout_marginTop="@dimen/marginSmall"
        android:digits="0,1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnm,,,"
        android:ems="10"
        android:hint="@string/tags"
        android:inputType="text" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textFieldHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSmall"
        android:ems="10"
        android:hint="@string/priceDescription"
        android:inputType="number" >
    </EditText>

    

    <Button
        android:id="@+id/myDatePickerButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:layout_marginRight="@dimen/marginSmall"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_action_go_to_today"
        android:spinnerMode="dialog"
        android:text="@string/dueDate"
        android:textColor="@color/darkGray"
        android:layout_gravity="right" />

  <TextView
        android:id="@+id/deadlineError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requiredField"
        android:textColor="@color/red"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/marginSmall" >

    </TextView>

</LinearLayout>